--- a/src/components/bio/bio.css
+++ b/src/components/bio/bio.css
@@ -16,3 +16,11 @@
   background-color: #25232E;
   padding-top: 60px;
 }
+
+/*media queries*/
+
+@media only screen and (max-width: 667px) {
+  #bio {
+    padding-top: 24px;
+  }
+}
