more media queries

--- a/src/components/bio/experience/experience.css
+++ b/src/components/bio/experience/experience.css
@@ -1,14 +1,17 @@
 .experience-square {
-  width: 58px;
   height: 58px;
-  background-color: white;
   border-radius: 2px;
+  width:58px;
 }
 
-.experience-square:nth-of-type(2) {
+.square-parent {
+  padding: 0 0px;
+}
+
+/*.experience-square:nth-of-type(2) {
   margin-left: 70px !important;
 
-}
+}*/
 
 /*.experience-item:nth-child(2)  {
   color: #A0DCFF !important;
@@ -25,14 +28,36 @@
 }
 
 #experience .row {
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
-.experience-company {
-  margin-right: 20px;
+#experience .col-xs-10 {
+  padding-left: 0;
 }
+/*.experience-company {
+  margin-right: 20px;
+}*/
 
 /*.experience-item {
   color: red;
   background-color: red;
 }*/
+
+/*.experience-item {
+  border: 1px solid white;
+}*/
+
+.experience-title, .experience-company {
+  padding-left: 0;
+  padding-right: 0;
+  text-align: left;
+}
+
+/*media queries*/
+
+@media only screen and (max-width: 667px) {
+#experience {
+  height: 600px;
+}
+
+ }
