--- a/src/components/bio/experience/experience.css
+++ b/src/components/bio/experience/experience.css
@@ -56,8 +56,9 @@
 /*media queries*/
 
 @media only screen and (max-width: 667px) {
-#experience {
-  height: 600px;
+
+#experience .row:nth-of-type(2) {
+  margin-top: 0;
 }
 
  }
