--- a/src/components/bio/skills/skills.css
+++ b/src/components/bio/skills/skills.css
@@ -1,13 +1,13 @@
 #front-end-skills {
-  color: #17D9A5;
+  color: #A0DCFF;
 }
 
 #back-end-skills {
-  color: #DB6F14;
+  color: #A8AFFF;
 }
 
 #misc-skills {
-  color: #A0DCFF;
+  color: #9AFFCC;
 }
 
 #skills p {
